# NexNix

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  toolchain-gnu.cmake
boot/: CMakeLists.txt  boot.cfg  build.mk  buildnb.sh
boot/include/: nbbase.h  nbefi.h  nexboot.h
boot/mach/bios/: CMakeLists.txt  link.ld  main.c
boot/mach/bios/arch/i386/: start.asm
boot/mach/bios/arch/x86_64/: start.asm
boot/mach/bios/bootstrap/: isombr.asm  mbr.asm  vbr.asm
boot/mach/bios/isombr/: CMakeLists.txt  isombr.asm
boot/mach/bios/mbr/: CMakeLists.txt  mbr.asm
boot/mach/bios/nexboot/: CMakeLists.txt  main.c  start.asm
boot/mach/bios/start/: mbr.asm  vbr.asm
boot/mach/bios/vbr/: CMakeLists.txt  vbr.asm
boot/mach/efi/: efilib.c  main.c  nbbuild.inf
boot/mach/efi/main/: efilib.c  entry.c  libkwrap.c
boot/mach/virt/: main.c
boot/mach/virt/arch/riscv64/: link.ld  start.asm
boot/main/: efilib.c  entry.c
conf/: gcc.patch  nexnix.cfg
configs/: conf-aarch64sr.txt  conf-i386pc-iso.txt  conf-i386pc-legacy.txt  conf-i386pc-legacyiso.txt  conf-i386pc.txt  conf-riscv64virt.txt  conf-x86_64pc-iso.txt  conf-x86_64pc.txt
dep/: builddep.sh  edk2.patch  gcc.patch
include/: config.h
lib/libk/: build.mk  libk.cfg  mem.c
nexboot/: .gitignore  CMakeLists.txt  build.sh  toolchain-gnu.cmake
nexboot-install/: .gitignore  CMakeLists.txt  nbooti.c
nexboot/pc/: CMakeLists.txt
nexboot/pc/boot/: mbr.s
neximg/: #main.c#  .#main.c  CMakeLists.txt  disk.c  main.c  mbr.c  neximg.h  part.c
scripts/: bochs-i386-pc.txt  bochs-i386legacy.txt  bochs-x86_64-pc.txt  builddep.sh  buildrun.sh  config.sh  image  image.sh  nexnix.cfg  osconfgen.sh  run.sh  toolchain.cmake  toolchain.mk  toolchain.sh
usr/include/: assert.h  config.h  version.h
usr/include/boot/: nbefi.h  nexboot.h
utils/: CMakeLists.txt  Makefile  confgen.c  mbrwrite.c
utils/confgen/: CMakeLists.txt  confgen.c
utils/mbrwrap/: CMakeLists.txt  mbrwrap.c
utils/mbrwrite/: CMakeLists.txt  mbrwrite.c
